--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Simon Says</title>
 </head>
 <body>
-    
+    <div class="display"></div>
 
     <!--JQuery/JS-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js' integrity='sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==' crossorigin='anonymous'></script>
